[package]
name = "konsumer_offsets"
version = "0.1.1"
edition = "2021"
authors = ["Ivan De Marino <detronizator@gmail.com>"]
repository = "https://github.com/kafkesc/konsumer_offsets"
homepage = "https://github.com/kafkesc/konsumer_offsets"
description = "A library crate to parse the content of the Kafka `__consumer_offsets` internal topic"
license = "MIT OR Apache-2.0"
keywords = ["apache", "kafka", "parser", "consumer_offsets"]
categories = ["encoding", "network-programming", "parsing"]
exclude = [
    ".gitignore",
    ".github/",
    "fixtures/",
]

[dependencies]
bytes_parser = "0.1.4"
thiserror = "1.0.40"

[dev-dependencies]
rstest = "0.16.0"
