[package]
name = "konsumer_offsets"
version = "0.3.2"
edition = "2021"
authors = ["Ivan De Marino <detronizator@gmail.com>"]
repository = "https://github.com/kafkesc/konsumer_offsets"
homepage = "https://github.com/kafkesc/konsumer_offsets"
description = "A library crate to parse the content of the Kafka `__consumer_offsets` internal topic"
license = "MIT OR Apache-2.0"
keywords = ["apache", "kafka", "parser", "consumer_offsets"]
categories = ["encoding", "network-programming", "parsing"]
exclude = [
    ".gitignore",
    ".github/",
    "fixtures/",
]

[dependencies]
bytes_parser = "0.1.5"
thiserror = "1.0.61"
chrono = { version = "0.4.38", optional = true, default-features = false, features = ["clock", "std"] }
time = { version = "0.3.36", optional = true, default-features = false, features = ["std"] }
serde = { version = "1.0.202", optional = true, default-features = false, features = ["derive", "std"] }

[dev-dependencies]
rstest = "0.19.0"

[features]
default = ["ts_int"]
ts_int = []
ts_chrono = ["dep:chrono"]
ts_time = ["dep:time"]
serde = ["dep:serde", "chrono?/serde", "time?/serde"]
